# e2e

./: .file-size-baseline  .gitignore  .gitlab-ci.yml  CLAUDE.md  CODEOWNERS  Cargo.toml  README.md  REUSE.toml  clippy.toml  deny.toml
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.gitlab/: sast-ruleset.toml
data/: blobs.db-shm  blobs.db-wal  device_sync.db-shm  device_sync.db-wal  federation.db-shm  federation.db-wal  recovery_proofs.db-shm  recovery_proofs.db-wal  relay_id
maestro/: README.md
maestro/android/: add_custom_group.yaml  add_decoy_contact.yaml  add_field.yaml  complete_exchange.yaml  configure_emergency_broadcast.yaml  create_identity.yaml  delete_decoy_contact.yaml  duress_unlock.yaml  emergency_shred.yaml  generate_qr.yaml  get_card.yaml  hide_contact.yaml  identity_purge.yaml  link_device.yaml  list_contacts.yaml  send_emergency_broadcast.yaml  setup_app_password.yaml  setup_duress_pin.yaml  sync.yaml  visibility_labels.yaml
maestro/ios/: add_custom_group.yaml  add_decoy_contact.yaml  add_field.yaml  complete_exchange.yaml  configure_emergency_broadcast.yaml  create_identity.yaml  delete_decoy_contact.yaml  duress_unlock.yaml  emergency_shred.yaml  generate_qr.yaml  get_card.yaml  hide_contact.yaml  identity_purge.yaml  link_device.yaml  list_contacts.yaml  send_emergency_broadcast.yaml  setup_app_password.yaml  setup_duress_pin.yaml  sync.yaml  visibility_labels.yaml
scenarios/edge/: device-conflict.yaml  exchange-error-paths.yaml  network-partition-healing.yaml  offline-exchange.yaml  relay-unavailable.yaml  sync-conflict-resolution.yaml
scenarios/integration/: five-user-exchange.yaml  recovery-flow.yaml  visibility-control.yaml
scenarios/smoke/: backup-restore.yaml  cli-exchange.yaml  device-linking.yaml  sync-basic.yaml  visibility-labels.yaml
src/: error.rs  flame.rs  lib.rs  ohttp_relay_manager.rs  orchestrator.rs  relay_manager.rs  report.rs  scenario.rs  subprocess_log.rs  test_logging.rs  user.rs
src/device/: cli.rs  maestro.rs  mod.rs  tauri.rs  tui.rs
src/yaml/: executor.rs  loader.rs  mod.rs  schema.rs
src/yaml/executor/: actions_backup.rs  actions_card.rs  actions_contacts.rs  actions_exchange.rs  actions_identity.rs  actions_infra.rs  actions_labels.rs  actions_recovery.rs  actions_sync.rs  assertions.rs  mod.rs
tests/: contact_actions.rs  cross_platform.rs  delivery_pipeline.rs  exchange_error_paths.rs  five_user_exchange.rs  multi_device_sync.rs  offline_catchup.rs  ohttp_advanced.rs  ohttp_helpers.rs  ohttp_integration.rs  onboarding_flow.rs  recovery_flow.rs  relay_failover.rs  resistance_features.rs  seeded_contacts.rs  version_enforcement_tests.rs  visibility_labels.rs  yaml_scenarios.rs
tests/it/: contact_actions.rs  cross_platform.rs  delivery_pipeline.rs  exchange_error_paths.rs  five_user_exchange.rs  main.rs  multi_device_sync.rs  offline_catchup.rs  ohttp_advanced.rs  ohttp_integration.rs  onboarding_flow.rs  recovery_flow.rs  relay_failover.rs  resistance_features.rs  seeded_contacts.rs  version_enforcement_tests.rs  visibility_labels.rs  yaml_scenarios.rs
two-device/: orchestrator.sh
two-device/lib/: two_device_lib.sh
two-device/scenarios/: symmetric_exchange.sh  symmetric_exchange.yaml  sync_convergence.sh  sync_convergence.yaml
two-device/subflows/: alice_edit_display_name.yaml  assert_has_alice.yaml  assert_has_bob.yaml  bob_diagnose_no_update.yaml  bob_observe_updated_name.yaml  onboard_alice.yaml  onboard_bob.yaml  present_qr.yaml  scan_qr_manual.yaml
