# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-e2e-tests"
version = "0.1.0"
edition = "2024"
description = "End-to-end testing infrastructure for Vauchi"
license = "AGPL-3.0-or-later"

[features]
# Enable JUnit XML output for CI
junit = []

[dependencies]
# Core library - use path dependency for local dev; CI uses git dependency
vauchi-core = { path = "../core/vauchi-core" }
vauchi-app = { path = "../core/vauchi-app", features = ["network-native-tls"] }

# Async runtime
tokio = { version = "1", features = ["full", "process", "time", "sync"] }

# Async trait support
async-trait = "0.1"

# Temp directories for isolated test data
tempfile = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Duration parsing (for YAML scenario timeouts)
humantime = "2"
humantime-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# PTY automation for TUI testing
expectrl = "0.7"

# HTTP client for Desktop test server
reqwest = { version = "0.12", features = ["json"] }

# Random number generation
rand = "0.8"

# Fake data generation for seeding contacts
fake = { version = "3", features = ["derive"] }

[dev-dependencies]
# Relay for integration tests - use git dependency for CI, patched to local path via .cargo/config.toml
vauchi-relay = { git = "https://gitlab.com/vauchi/relay.git", branch = "main" }

# OHTTP key generation for stale-key error tests
ohttp = { version = "0.7", default-features = false, features = ["client", "rust-hpke"] }

# Mock gateway for IP obfuscation verification tests
axum = "0.7"
tower = "0.5"

[[bin]]
name = "seed-contacts"
path = "src/bin/seed_contacts.rs"

[[test]]
name = "five_user_exchange"
path = "tests/five_user_exchange.rs"

[[test]]
name = "multi_device_sync"
path = "tests/multi_device_sync.rs"

[[test]]
name = "relay_failover"
path = "tests/relay_failover.rs"

[[test]]
name = "offline_catchup"
path = "tests/offline_catchup.rs"

[[test]]
name = "cross_platform"
path = "tests/cross_platform.rs"

[[test]]
name = "visibility_labels"
path = "tests/visibility_labels.rs"

[[test]]
name = "recovery_flow"
path = "tests/recovery_flow.rs"

[[test]]
name = "contact_actions"
path = "tests/contact_actions.rs"

[[test]]
name = "resistance_features"
path = "tests/resistance_features.rs"

[[test]]
name = "seeded_contacts"
path = "tests/seeded_contacts.rs"

[[test]]
name = "delivery_pipeline"
path = "tests/delivery_pipeline.rs"

[[test]]
name = "onboarding_flow"
path = "tests/onboarding_flow.rs"

[[test]]
name = "exchange_error_paths"
path = "tests/exchange_error_paths.rs"

[[test]]
name = "yaml_scenarios"
path = "tests/yaml_scenarios.rs"

[[test]]
name = "ohttp_integration"
path = "tests/ohttp_integration.rs"

[[test]]
name = "version_enforcement"
path = "tests/version_enforcement_tests.rs"

# Development profile: fast builds, backtraces work (matches core)
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Test profile: skip full debug info, reduce binary size ~60%
[profile.test]
debug = "line-tables-only"
split-debuginfo = "off"
