# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-e2e-tests"
version = "0.1.0"
edition = "2024"
description = "End-to-end testing infrastructure for Vauchi"
license = "AGPL-3.0-or-later"

[features]
# Enable JUnit XML output for CI
junit = []

# Enable tracing-flame layer for profiling. Generates a `.folded` trace
# file under `e2e/artifacts/flame/` (or `$VAUCHI_FLAME_OUT`) that can be
# rendered to SVG via `inferno-flamegraph`. See `just flame-e2e <test>`.
flame = ["dep:tracing-subscriber", "dep:tracing-flame", "dep:ctor"]

[dependencies]
# Core library — git dependency for CI; patched to local path via .cargo/config.toml
vauchi-core = { git = "https://gitlab.com/vauchi/core.git", branch = "main" }
vauchi-app = { git = "https://gitlab.com/vauchi/core.git", branch = "main", features = ["network-native-tls"] }

# Async runtime
tokio = { version = "1", features = ["full", "process", "time", "sync"] }

# Async trait support
async-trait = "0.1"

# Temp directories for isolated test data
tempfile = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Duration parsing (for YAML scenario timeouts)
humantime = "2"
humantime-serde = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Profiling (enabled via `flame` feature)
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-flame = { version = "0.2", optional = true }
ctor = { version = "0.2", optional = true }

# PTY automation for TUI testing
expectrl = "0.7"

# HTTP client for Desktop test server
reqwest = { version = "0.12", features = ["json"] }

# Random number generation
rand = "0.8"

# Fake data generation for seeding contacts
fake = { version = "3", features = ["derive"] }

[dev-dependencies]
# Relay for integration tests - use git dependency for CI, patched to local path via .cargo/config.toml
vauchi-relay = { git = "https://gitlab.com/vauchi/relay.git", branch = "main" }

# OHTTP key generation for stale-key error tests
ohttp = { version = "0.7", default-features = false, features = ["client", "rust-hpke"] }

# Mock gateway for IP obfuscation verification tests
axum = "0.7"
tower = "0.5"

# Key fingerprint verification
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "seed-contacts"
path = "src/bin/seed_contacts.rs"


# Development profile: fast builds, backtraces work (matches core)
[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Test profile: skip full debug info, reduce binary size ~60%
[profile.test]
debug = "line-tables-only"
split-debuginfo = "off"
